# RotatingCube

./: CMakeLists.txt  README.md  config.h.in
include/: shader.h
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
